feat (Services): added !index` API and test
added API to fetch a paginated list of services. this list has all the information available for a service.
added services test file. it tests index API for now.
